--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <!-- Profile image -->
         <div class="col-12 col-md-4 text-center">
-          <img src="../bootstrap-gallery/images/mew.jpg"
+          <img src="mew.jpg"
                class="rounded-circle border border-3 border-light shadow-sm"
                alt="Profile " width="370" height="350">
         </div>
@@ -78,3 +78,4 @@
 
 </body>
 </html>
+
