--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
           <p class="text-muted mt-2">นักเรียนนักศึกษา | วิทยาลัยอาชีวศึกษา</p>
 
           <p>
-            👋 สวัสดีครับ หนูเป็นนักเรียนสายไอทีที่สนใจเขียนโปรแกรม  
+            👋 สวัสดีค่า หนูเป็นนักเรียนสายไอทีที่สนใจเขียนโปรแกรม  
             ชอบทำเว็บแอป และกำลังเรียนรู้ JavaScript, Node.js, Python
           </p>
 
@@ -78,4 +78,5 @@
 
 </body>
 </html>
+
 
